Change of libraries to Commons Math

--- a/src/HybridCharacteristicSingleNucleotidePolymorphismAssociationDatabase/nbproject/private/private.properties
+++ b/src/HybridCharacteristicSingleNucleotidePolymorphismAssociationDatabase/nbproject/private/private.properties
@@ -3,4 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
+project.library=/data/src/library
 user.properties.file=/home/fseifert/.netbeans/8.2/build.properties
