--- a/src/HybridCharacteristicClusterAssociationDatabase/nbproject/project.properties
+++ b/src/HybridCharacteristicClusterAssociationDatabase/nbproject/project.properties
@@ -27,18 +27,19 @@ dist.jar=${dist.dir}/HybridCharacteristicClusterAssociationDatabase.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jsc.jar=../../../../../../extern/jsc.jar
+file.reference.commons-math3-3.6.1.jar=/data/extern/commons-math3-3.6.1/commons-math3-3.6.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jsc.jar}:\
-    ${reference.library.jar}
+    ${reference.library.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
