--- a/src/HybridCharacteristicMicroarraySequenceCorrelationDatabase/nbproject/private/private.properties
+++ b/src/HybridCharacteristicMicroarraySequenceCorrelationDatabase/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-cli-1.3.1.jar=/data/extern/commons-cli-1.4/commons-cli-1.4.jar
 javac.debug=true
 javadoc.preview=true
-project.library=/data/projects/uhh_scholten/srna_heterosis_refgen4/publication_github/src/library
+project.library=/data/src/library
 user.properties.file=/home/fseifert/.netbeans/8.2/build.properties
