--- a/src/HybridCharacteristicMicroarraySequenceCorrelationDatabase/nbproject/project.properties
+++ b/src/HybridCharacteristicMicroarraySequenceCorrelationDatabase/nbproject/project.properties
@@ -28,16 +28,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-cli-1.3.1.jar=/lab/extern/apache_java_api/commons-cli-1.3.1/commons-cli-1.3.1.jar
-file.reference.jsc.jar=../../../../../../extern/jsc.jar
+file.reference.commons-math3-3.6.1.jar=/data/extern/commons-math3-3.6.1/commons-math3-3.6.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jsc.jar}:\
     ${reference.library.jar}:\
-    ${file.reference.commons-cli-1.3.1.jar}
+    ${file.reference.commons-cli-1.3.1.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
