--- a/src/HybridCharacteristicSequenceAssociationDatabase/nbproject/project.properties
+++ b/src/HybridCharacteristicSequenceAssociationDatabase/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/HybridCharacteristicSequenceAssociationDatabase.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jsc.jar=/lab/extern/jsc.jar
+file.reference.commons-math3-3.6.1.jar=/data/extern/commons-math3-3.6.1/commons-math3-3.6.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -35,7 +35,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${reference.library.jar}:\
-    ${file.reference.jsc.jar}
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
